roomy-frontend/style.css
.box {
    width: 100%;
    word-wrap: normal;
}

.text-wrap {
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100%;
}

.text-wrap > p {
    text-overflow: ellipsis;
}

.wrapped {
    word-wrap: normal;
    overflow-wrap: normal;
}

p {
    word-wrap: normal;
}

form {
    width: 100%;
}

.squarer {
    width: 256px;
    height: 256px;
}

.modal-card p {
    max-width: 95%;
    overflow-wrap: break-word;
}

